--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,5 @@ node_modules
 .env.local
 .idea
 .vscode
-.DS_Store
-node_modules
-.env
-.env.local
-.idea
-.vscode
+backend/Back/obj/
+backend/Back/bin/
