--- a/backend/Back/appsettings.json
+++ b/backend/Back/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=database;Database=mydb;Username=postgres;Password=mysecretpassword"
+  }
 }
