--- a/backend/Back/Dockerfile
+++ b/backend/Back/Dockerfile
@@ -1,5 +1,4 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
@@ -7,10 +6,9 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Back/Back.csproj", "Back/"]
-RUN dotnet restore "Back/Back.csproj"
+COPY ["Back.csproj", "./"]
+RUN dotnet restore "./Back.csproj"
 COPY . .
-WORKDIR "/src/Back"
 RUN dotnet build "Back.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
@@ -20,4 +18,5 @@ RUN dotnet publish "Back.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseA
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY .env .
 ENTRYPOINT ["dotnet", "Back.dll"]
