--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.6.12",
     "core-js": "^3.8.3",
     "v-tooltip": "^2.1.3",
     "vue": "^3.2.13",
