fix: composer setup now works

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -4,7 +4,6 @@ ENV POSTGRES_USER=api_user
 ENV POSTGRES_PASSWORD=api_user_password
 ENV POSTGRES_DB=api_database
 
-COPY ./scripts/01-init.sql /docker-entrypoint-initdb.d/
-COPY ./scripts/02-dataToDatabase.sql /docker-entrypoint-initdb.d/
+COPY scripts/* /docker-entrypoint-initdb.d/
 
 EXPOSE 5432
