--- a/backend/Back/Dockerfile
+++ b/backend/Back/Dockerfile
@@ -19,4 +19,5 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 COPY .env .
+ENV ASPNETCORE_ENVIRONMENT=Development
 ENTRYPOINT ["dotnet", "Back.dll"]
