--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "tests": "jest"
   },
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
@@ -17,7 +18,11 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/vue3-jest": "^27.0.0",
+    "jest": "^27.1.0",
     "prettier": "^2.4.1"
   },
   "browserslist": [
