refactor: static files folder changed

--- a/backend/Back/Back.csproj
+++ b/backend/Back/Back.csproj
@@ -32,7 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Data\Stored\" />
+      <Folder Include="wwwroot\img\" />
     </ItemGroup>
 
 </Project>
