--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "tests": "jest"
+    "tests": "jest",
+    "test": "vitest"
   },
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
@@ -17,13 +18,17 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^27.0.0",
+    "happy-dom": "^15.11.7",
     "jest": "^27.1.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "vite": "^5.4.11",
+    "vitest": "^2.1.8"
   },
   "browserslist": [
     "> 1%",
