fix: tag search works properly

--- a/backend/Back/appsettings.Development.json
+++ b/backend/Back/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=api_database;Username=api_user;Password=api_user_password;SearchPath=api_schema"
   }
 }
