--- a/backend/Back/appsettings.json
+++ b/backend/Back/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=database;Database=mydb;Username=postgres;Password=mysecretpassword"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=api_database;Username=api_user;Password=api_user_password;SearchPath=api_schema"
   }
 }
