--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
     "core-js": "^3.8.3",
+    "dotenv": "^16.4.7",
     "v-tooltip": "^2.1.3",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
