--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -9,7 +9,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@splidejs/vue-splide": "^0.6.12",
+    "axios": "^1.7.9",
+    "axois": "^0.0.1-security",
     "core-js": "^3.8.3",
     "dotenv": "^16.4.7",
     "v-tooltip": "^2.1.3",
