feat: frontend-vue added to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,26 @@ services:
             retries: 3
             start_period: 10s
 
+    frontend:
+        build:
+            context: ./frontend-vue
+            dockerfile: Dockerfile
+        ports:
+            - "8084:8080" 
+        networks:
+            - api-network
+        depends_on:
+            - server
+        volumes:
+            - ./frontend-vue:/app
+            - /app/node_modules
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8084/health"]
+            interval: 30s
+            timeout: 10s
+            retries: 3
+            start_period: 10s
+
 networks:
     api-network:
         driver: bridge
