--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,26 @@ services:
             retries: 3
             start_period: 10s
 
+    admin-frontend:
+        build:
+            context: ./frontend-admin
+            dockerfile: Dockerfile
+        ports:
+            - "8085:8085"
+        networks:
+            - api-network
+        depends_on:
+            - adminpanel
+        volumes:
+            - ./frontend-admin:/app
+            - /app/node_modules
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8085"]
+            interval: 30s
+            timeout: 10s
+            retries: 3
+            start_period: 10s
+
 networks:
     api-network:
         driver: bridge
