cleanup: removal of hardcoded variables, removal of depedency on additional .env files, now only one needed

--- a/backend/Back/appsettings.Development.json
+++ b/backend/Back/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=api_database;Username=api_user;Password=api_user_password;SearchPath=api_schema;Trust Server Certificate=true"
+    "DefaultConnection": "${DEFAULT_CONNECTION}"
   }
 }
