addition of more configuration points
Frontend is NOT WORKING

--- a/backend/Back/appsettings.Development.json
+++ b/backend/Back/appsettings.Development.json
@@ -5,7 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "${DEFAULT_CONNECTION}"
+    "DefaultConnection": "Host=database;Port=5432;Database=${DATABASE};Username=${DATABASE_USER};Password=${DATABASE_PASSWORD}"
   }
 }
