--- a/backend/Back/appsettings.json
+++ b/backend/Back/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "${DEFAULT_CONNECTION}"
+    "DefaultConnection": "Host=database;Port=5432;Database=${DATABASE};Username=${DATABASE_USER};Password=${DATABASE_PASSWORD}"
   }
 }
