--- a/frontend-admin/Dockerfile
+++ b/frontend-admin/Dockerfile
@@ -8,6 +8,12 @@ RUN npm install
 
 COPY . .
 
+ARG VITE_SERVER_PORT
+ARG VITE_ADMINPANEL_PORT
+
+ENV VITE_SERVER_PORT=$VITE_SERVER_PORT
+ENV VITE_ADMINPANEL_PORT=$VITE_ADMINPANEL_PORT
+
 EXPOSE 8085
 
 CMD ["npm", "run", "dev"]
