--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,10 +26,10 @@ services:
             dockerfile: Dockerfile
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
-            - ConnectionStrings__DefaultConnection=${DEFAULT_CONNECTION}
+            - ConnectionStrings__DefaultConnection="Host=database;Port=5432;Username=${DATABASE_USER};Password=${DATABASE_PASSWORD};Database=${DATABASE}"
             - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-            - JWT_ISSUER=${JWT_ISSUER}
-            - JWT_AUDIENCE=${JWT_AUDIENCE}
+            - JWT_ISSUER=http://localhost:8080
+            - JWT_AUDIENCE=http://localhost:8080
         ports:
             - "8088:8080"
             - "8081:8081"
@@ -51,10 +51,10 @@ services:
             dockerfile: Dockerfile
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
-            - ConnectionStrings__DefaultConnection=${DEFAULT_CONNECTION}
+            - ConnectionStrings__DefaultConnection="Host=database;Port=5432;Username=${DATABASE_USER};Password=${DATABASE_PASSWORD};Database=${DATABASE}"
             - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-            - JWT_ISSUER=${JWT_ISSUER}
-            - JWT_AUDIENCE=${JWT_AUDIENCE}
+            - JWT_ISSUER=http://localhost:8082
+            - JWT_AUDIENCE=http://localhost:8082
         ports:
             - "8082:8082"
             - "8083:8083"
