--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
             dockerfile: Dockerfile
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
-            - ConnectionStrings__DefaultConnection="Host=database;Port=5432;Username=${DATABASE_USER};Password=${DATABASE_PASSWORD};Database=${DATABASE}"
+            - ConnectionStrings__DefaultConnection=Host=database;Port=5432;Username=${DATABASE_USER};Password=${DATABASE_PASSWORD};Database=${DATABASE}
             - JWT_SECRET_KEY=${JWT_SECRET_KEY}
             - JWT_ISSUER=http://localhost:8080
             - JWT_AUDIENCE=http://localhost:8080
@@ -51,7 +51,7 @@ services:
             dockerfile: Dockerfile
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
-            - ConnectionStrings__DefaultConnection="Host=database;Port=5432;Username=${DATABASE_USER};Password=${DATABASE_PASSWORD};Database=${DATABASE}"
+            - ConnectionStrings__DefaultConnection=Host=database;Port=5432;Username=${DATABASE_USER};Password=${DATABASE_PASSWORD};Database=${DATABASE}
             - JWT_SECRET_KEY=${JWT_SECRET_KEY}
             - JWT_ISSUER=http://localhost:8082
             - JWT_AUDIENCE=http://localhost:8082
